--- a/ML_Hikethon.ipynb
+++ b/ML_Hikethon.ipynb
@@ -3,9 +3,11 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "ML Hikethon.ipynb",
+      "name": "ML_Hikethon.ipynb",
       "version": "0.3.2",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     "accelerator": "TPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/gaurishankar9793/ML-Hikeathon/blob/master/ML_Hikethon.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "metadata": {
         "id": "xN7P2CWgl6Uq",
@@ -42,7 +54,7 @@
         "drive = GoogleDrive(gauth)\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +98,7 @@
         "  f_.GetContentFile(fname)\n",
         "  "
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +189,7 @@
         "display(train_df.shape)\n",
         "display(train_df.is_chat.value_counts())"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -235,7 +247,7 @@
         "for col in cols:\n",
         "  t2['1'+col] = t2['node1_id'].apply(lambda x: train_features.loc[x,col])"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,7 +278,7 @@
         "for col in cols:\n",
         "  t2['2'+col] = t2['node2_id'].apply(lambda x: train_features.loc[x,col])"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,7 +308,7 @@
       "source": [
         "t2.head()"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -517,7 +529,7 @@
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.pipeline import Pipeline"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,7 +588,7 @@
         "# Compile model\n",
         "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,7 +615,7 @@
       "source": [
         "model.fit(X,Y, epochs = 10, batch_size = 1000)"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -662,7 +674,7 @@
       "source": [
         "model.predict(X)"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -716,7 +728,7 @@
       "source": [
         "test_df.shape"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -772,7 +784,7 @@
         "  t+=200000\n",
         "  "
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -879,7 +891,7 @@
       "source": [
         "len(l)\n"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -909,7 +921,7 @@
       "source": [
         "59*200000"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -939,7 +951,7 @@
       "source": [
         "test_df.shape"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -982,7 +994,7 @@
       "source": [
         "len(flat_list)"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1013,7 +1025,7 @@
         "test_df['Score'] = flat_list\n",
         "test_df.head()"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1114,7 +1126,7 @@
         "test_f = test_df[['id','Score']]\n",
         "test_f.shape"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1145,7 +1157,7 @@
         "# test_f['Score'] = test_f['Score'].values\n",
         "type(test_f.Score[0])"
       ],
-      "execution_count": 52,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1175,7 +1187,7 @@
       "source": [
         "test_f['is_chat'] = test_f['Score'].apply(lambda x: x[0])"
       ],
-      "execution_count": 53,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1206,7 +1218,7 @@
         "test_f.drop(columns = 'Score', inplace = True)\n",
         "test_f.head()"
       ],
-      "execution_count": 54,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1308,18 +1320,18 @@
       "metadata": {
         "id": "YsMzJgz4LmiR",
         "colab_type": "code",
+        "outputId": "2d8da7a1-cc6f-440f-cd19-d3d869549261",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 471
-        },
-        "outputId": "2d8da7a1-cc6f-440f-cd19-d3d869549261"
+        }
       },
       "cell_type": "code",
       "source": [
         "from google.colab import files\n",
         "files.download('prediction.csv') "
       ],
-      "execution_count": 62,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
